--- a/registroUsuario.html
+++ b/registroUsuario.html
@@ -182,9 +182,11 @@
       contraseñaConfirm = document.getElementById('txtPassConfirm').value;
       numero = document.getElementById('numTel').value; 
 
+      const id = usuarioGuardado.length > 0 ? usuarioGuardado[usuarioGuardado.length - 1].id + 1 : 1;
+
       // Validacion
-      if(validaciones(contraseña, contraseñaConfirm, correo, correoConfirm) === 0){
-        nuevaUsuario = new Usuario(1, nombre, correo, contraseña, numero, region, comuna)
+      if(validaciones(usuarioGuardado, nombre, contraseña, contraseñaConfirm, correo, correoConfirm) === 0){
+        nuevaUsuario = new Usuario(id, nombre, correo, contraseña, numero, region, comuna, "Usuario")
 
         usuarioGuardado.push(nuevaUsuario);
         localStorage.setItem("usuarios", JSON.stringify(usuarioGuardado));
@@ -194,6 +196,7 @@
 
     }
  </script>
+ <script src="js/validaciones.js"></script>
  <script>
     // Limites
     // Nombre
@@ -220,79 +223,6 @@
     document.getElementById("txtPassConfirm").required = true;
     const passwordConfirm = document.getElementById("txtPass")
     // Maximo
-    passwordConfirm.maxLength = 10;
-
-    // Validaciones
-    function validaciones(contraseñaF, contraseñaConfirmF, correoF, correoConfirmF){
-      let resultado = 0;
-      if(valiPass(contraseñaF) === false){
-        resultado = 1;
-      } else if(passConfi(contraseñaF, contraseñaConfirmF) === false){
-        resultado = 1;
-      } else if(valiCorre(correoF) === false){
-        resultado = 1;
-      } else if(correConfi(correoF, correoConfirmF) === false){
-        resultado = 1;
-      }
-      return resultado;
-    }
-
-    // Contraseña
-    function valiPass(contraseñaF){
-      let valor = contraseñaF.length;
-      if(valor < 4){
-        document.getElementById("labelPass").innerHTML = "La contraseña es de minimo 4 caracteres";
-        return false;
-      } else {
-        return true;
-      }
-    }
-
-    // Confirmar Password
-    function passConfi(contraseñaF, contraseñaConfirmF){
-      if(contraseñaF === contraseñaConfirmF){
-        return true;
-      } else {
-        document.getElementById("labelPassConfirm").innerHTML = "Ambas contraseñas deben ser iguales";
-        return false;
-      }
-    }
-
-    // Correo
-    function valiCorre(correoF){
-      let carFormado = ""; // Caracter formado
-      let corteArroba = 0;
-
-      let larCorre = correoF.length;
-
-      for(let index = 0; index < larCorre; index++) {
-        // Slice para cortar 
-        let caracter = correoF.slice(index, index +1) // Primer valor , posicion de inicio , segundo valor , Posicion de termino
-        if(caracter === "@"){
-          carFormado += caracter;
-          corteArroba = 1; // Una vez pasado el arroba , forma el str
-        } else if (corteArroba === 1){
-          carFormado += caracter;
-        }
-      }
-      if(carFormado === "@gmail.com" || carFormado === "@duoc.cl" || carFormado === "@profesor.duoc.cl") {
-        console.log(carFormado);
-        return true;
-      } else {
-        document.getElementById("labelCorreo").innerHTML = "Solo se permiten correos @gmail.com, @duoc.cl, @profesor.duoc.cl";
-        return false; // Indica si el correo es Correcto o No
-      }
-
-    }
-
-    // Confirmar Correo
-    function correConfi(correoF, correoConfirmF){
-      if(correoF === correoConfirmF){
-        return true;
-      } else {
-        document.getElementById("labelCorreoConfirm").innerHTML = "Ambos correos deben ser iguales";
-        return false;
-      }
-    }
+    passwordConfirm.maxLength = 10;  
  </script>
 </html>
