--- a/editarUsuario.html
+++ b/editarUsuario.html
@@ -232,10 +232,14 @@
 
       // Numero
       const numero1 = document.getElementById('numTel').value;
-      numero = usuEdit[0].numero;
+      numero = usuEdit[0].telefono;
 
       // Rol
       rolUser = usuEdit[0].rol;
+
+      // Region y Comuna
+      let regiEdit = usuEdit[0].region;
+      let comuEdit = usuEdit[0].comuna;
 
       
       // Verifica que no se repita el Nombre con uno ya Existente
@@ -248,7 +252,7 @@
         if(existe != 1){
         for (let i = 0; i < 10; i++) {
         // romper el ciclo en la 6ta iteracion
-            if(i == 6){
+            if(i == 10){
                 break;
             }
             // Nombre
@@ -277,26 +281,31 @@
             if(numero1.trim() != "") {
                 numero = numero1;
             }
+            if(region !== "" || region !== "Nada"){
+              regiEdit = region;
+              if(comuna !== "" || comuna !== "0"){
+                comuEdit = comuna;
+              }
+            }
             }
         }
       });
       
 
       // Validacion
-      if(validacionEditUser(usuarioGuardado, nombre, contraseña, contraseñaConfirm, correo, correoConfirm, numero, region, comuna) === 0){
+      if(validacionEditUser(usuarioGuardado, nombre, contraseña, contraseñaConfirm, correo, correoConfirm, numero, regiEdit, comuEdit) === 0){
 
 
         usuarioGuardado.forEach(us => {
           if(us.id === usuEdit[0].id){
             // Aplica los cambios
-            usuarioGuardado[us.id - 1].id = id;
             usuarioGuardado[us.id - 1].nombre = nombre;
             usuarioGuardado[us.id - 1].correo = correo;
             usuarioGuardado[us.id - 1].contraseña = contraseña;
-            usuarioGuardado[us.id - 1].numero = numero;
-            usuarioGuardado[us.id - 1].rolUser = rolUser;
-            usuarioGuardado[us.id - 1].region = region;
-            usuarioGuardado[us.id - 1].comuna = comuna;
+            usuarioGuardado[us.id - 1].telefono = numero;
+            usuarioGuardado[us.id - 1].rol = rolUser;
+            usuarioGuardado[us.id - 1].region = regiEdit;
+            usuarioGuardado[us.id - 1].comuna = comuEdit;
 
             localStorage.setItem("usuarios", JSON.stringify(usuarioGuardado));
           }
