Se agrego sobre nosotros, se mejoro home admin y fixes
Se corrigio el error de la barra de busqueda en las paginas de noticias

--- a/noticia_1.html
+++ b/noticia_1.html
@@ -76,7 +76,8 @@
                 <img class="img-articulo" src="img/megaman starforce.jpg" alt="Megaman Starforce Collection">
                 <h2 class="titulos"><strong>Sinopsis</strong></h2>
                 <p class="txt-sinopsis">
-                    “Después de años de rumores y deseo, Mega Man Star Force Legacy Collection ha sido anunciado para 2026, con todos los títulos incluidos y mejoras modernas. Descubre cómo la nostalgia y la exigencia llevaron a este esperado regreso de los clásicos de DS.”
+                    “Después de años de rumores y deseo, Mega Man Star Force Legacy Collection ha sido anunciado para 2026, con todos los títulos incluidos y mejoras modernas. <br>
+                     Descubre cómo la nostalgia y la exigencia llevaron a este esperado regreso de los clásicos de DS.”
                 </p>
                 <h2 class="subtitulo-articulo"><strong>Articulo</strong></h2>
                 <p class="txt-noticia">
