--- a/nosotros.html
+++ b/nosotros.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs y Noticias</title>
-    <link rel="stylesheet" href="css/noticia.css">
+    <title>Sobre Nosotros</title>
+    <link rel="stylesheet" href="css/nosotros.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -69,24 +69,20 @@
     </header>
 
     <main class="container py-5">
-        <h1 class="titulos"><strong>BLOGS Y NOTICIAS</strong> </h1>
+        <h1 class="titulos"><strong>SOBRE NOSOTROS</strong> </h1>
+        <hr>
 
         <div class="padre">
             <div>
-                <h1 class="titulo-noticia">¡Megaman StarForce Collection ha sido anunciado!</h1>
-                <p class="txt-noticia">“Después de años de rumores y deseo, Mega Man Star Force Legacy Collection ha sido anunciado para 2026, con todos los títulos incluidos y mejoras modernas. Descubre cómo la nostalgia y la exigencia llevaron a este esperado regreso de los clásicos de DS.”</p>
-                <button type="button" class="btn btn-primary btn-lg"><a href="noticia_1.html">Ver blog</a></button>
+                <h1><strong>¡LEVEL-UP GAMER!</strong></h1>
+                <p >Level-Up Gamer nació hace dos años en Chile como respuesta a la creciente demanda de productos gamer durante la pandemia. Desde entonces, nos hemos consolidado como una tienda online especializada en satisfacer las necesidades de la comunidad gamer en todo el país. Aunque no contamos con una ubicación física, llegamos a cada rincón de Chile a través de un sistema de despachos confiable y seguro. <br> 
+                    En nuestra tienda encontrarás una amplia variedad de productos: consolas, computadores gamers, accesorios, periféricos, sillas especializadas, juegos de mesa y ropa personalizada. Cada artículo que ofrecemos es seleccionado pensando en la calidad, autenticidad y en brindar la mejor experiencia de juego posible. 
+                    <br> Nuestra misión es proporcionar productos de alta calidad para gamers en todo Chile, ofreciendo una experiencia de compra única, personalizada y centrada en la satisfacción del cliente.
+                    <br> Nuestra visión es convertirnos en la tienda online líder en productos gamer en Chile, reconocida por nuestra innovación, servicio al cliente excepcional y un exclusivo programa de fidelización con gamificación, que recompensa a nuestros clientes más fieles con puntos LevelUp y beneficios especiales.
+                    <br> Más que una tienda, somos una comunidad. A través de nuestro contenido, noticias y participación en eventos, buscamos fortalecer los lazos con los jugadores y apoyar el crecimiento del ecosistema gamer en Chile.</p>
+                <button type="button" class="btn btn-primary btn-lg"><a href="home.html">Volver</a></button>
             </div>
-            <img class="img-noticia mx-auto"  src="img/megaman starforce.jpg" alt="Blog 1">
-        </div>
-
-        <div class="padre">
-            <div>
-                <h1 class="titulo-noticia">¡Se aproxima el lanzamiento de Hollow Knight:Silksong!</h1>
-                <p class="txt-noticia">"Tras años de silencio y rumores, Hollow Knight: Silksong finalmente vio la luz. La espera se convirtió en un fenómeno cultural lleno de memes, teorías y pasión de los fans. Descubre cómo la ansiedad colectiva transformó el lanzamiento en una celebración mundial."</p>
-                <button type="button"  class="btn btn-primary btn-lg"><a href="noticia_2.html">Ver blog</a></button>
-            </div>
-            <img class="img-noticia mx-auto"  src="img/cancion de seda.jpeg" alt="Blog 2">
+            <img class="img-logo"  src="img/Level Up Gamer Logo Transparente.png" alt="Logo">
         </div>
 
     </main>
